--- a/MkDocs/mkdocs.yml
+++ b/MkDocs/mkdocs.yml
@@ -117,6 +117,7 @@ extra_css:
 extra_javascript:
     - resources/js/darkmodefix.min.js
     - resources/js/repoinfo.min.js
+    # - resources/js/historyfilter.min.js -> 暂未完成实现
     # - resources/js/feedback.min.js
     - resources/js/timeago.min.js
     - resources/js/tablesort.min.js
