--- a/MkDocs/mkdocs.yml
+++ b/MkDocs/mkdocs.yml
@@ -131,6 +131,7 @@ extra_javascript:
 
 plugins:
   - loop_custom: # Custom plugin, directly inject functions
+  - meta: #![INSIDERS]
   - blog:
       blog_toc: true
       authors_profiles: true
