--- a/MkDocs/mkdocs.yml
+++ b/MkDocs/mkdocs.yml
@@ -163,6 +163,7 @@ plugins:
       lang:
         - zh
         - en
+  - optimize: #![INSIDERS]
   - git-revision-date-localized:
       type: iso_datetime
       enable_creation_date: true # 创建日期
