--- a/MkDocs/mkdocs.yml
+++ b/MkDocs/mkdocs.yml
@@ -73,7 +73,6 @@ theme:
 nav:
   - 主页:
       - index.md
-      - symbols.md
   - 项目:
       - docs/index.md
       - PowerToys:
@@ -97,6 +96,7 @@ nav:
   - 关于:
       - about/index.md
       - 赞助: about/sponsor.md
+      - 附录: about/symbols.md
 
 # extra:
 #   analytics:
