空链接点击什么也不会发生
如果不改href的话，空的href会跳转到本页

--- a/MkDocs/mkdocs.yml
+++ b/MkDocs/mkdocs.yml
@@ -133,6 +133,7 @@ extra_javascript:
   # - resources/js/feedback.min.js
   - resources/js/timeago.min.js
   - resources/js/tablesort.min.js
+  - resources/js/clearhref.min.js
   - resources/js/mathjax.min.js
   - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
