重写修复了原版tabs栏动画错误...
原版在giscus加载后，tabs的出现标定点会乱掉。现直接重写了一份控制。

--- a/MkDocs/mkdocs.yml
+++ b/MkDocs/mkdocs.yml
@@ -129,6 +129,7 @@ extra_css:
   - resources/css/badge.min.css
 extra_javascript:
   - resources/js/darkmodefix.min.js
+  - resources/js/tabsfix.min.js
   - resources/js/repoinfo.min.js
   # - resources/js/feedback.min.js
   - resources/js/timeago.min.js
