启用软换行

--- a/MkDocs/mkdocs.yml
+++ b/MkDocs/mkdocs.yml
@@ -205,6 +205,7 @@ hooks:
   - overrides/hooks/shortcodes.py
 
 markdown_extensions:
+  - markdown.extensions.nl2br
   - abbr
   - admonition
   - attr_list
