添加 nobr 自动清除换行功能

--- a/MkDocs/mkdocs.yml
+++ b/MkDocs/mkdocs.yml
@@ -203,6 +203,7 @@ plugins:
 
 hooks:
   - overrides/hooks/shortcodes.py
+  - overrides/hooks/nobr.py
 
 markdown_extensions:
   - markdown.extensions.nl2br
