--- a/MkDocs/mkdocs.yml
+++ b/MkDocs/mkdocs.yml
@@ -211,6 +211,11 @@ markdown_extensions:
   - attr_list
   - def_list
   - footnotes
+  - img2fig:
+      source_attr: title
+      remove_attr: true
+      force_convert: false
+      empty_as_none: false
   - md_in_html
   - nl2br
   - tables
@@ -220,8 +225,6 @@ markdown_extensions:
       slugify: !!python/object/apply:pymdownx.slugs.slugify
         kwds:
           case: lower
-  - yafg:
-      stripTitle: true
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.details
